# Dispredict3.0

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.txt  README.md  dockerfile.txt  install_dependencies.sh  pyproject.toml
ParallelDispredict3.0/: parallelDispredict.sh  splitFasta.py
dataset/: flDPnn_DissimiTest_Annotation.txt  flDPnn_Training_Annotation.txt  flDPnn_Validation_Annotation.txt
example/: sample.fasta
output/: sample_disPred.txt
script/: Dispredict3.0.py
tools/fldpnn/: DNA_Residue_DisoOnly_CV.sav  DisoComb.sh  Linker_Residue_DisoOnly_CV.sav  Protein_Residue_DisoOnly_CV.sav  README.md  RNA_Residue_DisoOnly_CV.sav  dockerinout  flDPnn_Function_workflow.py  run_flDPnn.py
tools/fldpnn/example/: DP00003.html  function_results.txt  results.html  test.fasta
tools/fldpnn/programs/: create_default_pssm
tools/fldpnn/programs/DFLpred/: AAind_to_use
tools/fldpnn/programs/DFLpred/myIUPRED/: myiupred  myiupred.c
tools/fldpnn/programs/DisoRDPbind/: DisoRDPbind  DisoRDPbind.cpp
tools/fldpnn/programs/NNpackage/: DP00845.score  Disnet.py  layer64_8.2.h5
tools/fldpnn/programs/fMoRFpred/: MoRFs_model_ultimate.model  aaindex1_test  espritz.pl  fMoRFpred.sh  iupred  runpsipred_single
tools/fldpnn/programs/iupred/: README  iupred  iupred.c  parseSeq4iuPred.pl
tools/fldpnn/programs/logReg/: logitReg  logitReg.cpp
tools/fldpnn/pyflDPnn_tmp_2022050713223826/: seqs.fasta
tools/fldpnn/pyflDPnn_tmp_2022050713223826/tmp_seqs/: P61626.align  P61626.out  P61626.pssm  idlist  seqs_dflpred.predictions  seqs_disordpbind.predictions
(+481 files in other folders)
