[tool.poetry]
name = "dispredict3.0"
version = "0.1.0"
description = "Dispredict3.0: Prediction of Intrinsically Disordered Proteins with Protein Language Model"
authors = ["Md Wasi Ul Kabir <mkabir3@uno.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
plotly = "4.14.3"
scikit-learn = "0.23.1"
keras = "2.4.3"
tensorflow = "2.4.1"
pandas = "1.2.2"
fair-esm = "^0.4.0"
metapredict = "^2.2"
lightgbm = "^3.3.2"
biopython = "^1.79"
gdown = "^4.4.0"
ipykernel = "^6.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
